assets/css/card.css
.card-container {
  overflow-x: auto;
}

.card-container::-webkit-scrollbar {
  display: none;
}

.card-container__inner {
  display: flex;
  flex-flow: row nowrap;
  width: max-content;
  padding: 0 20px;
}

.card {
  position: relative;

  display: flex;
  flex-direction: column;
  justify-content: flex-end;

  font-family: Arial, sans-serif;

  background: #f7f7f7;
  border-radius: 20px;
}

.card--type--micro {
  flex: 0 0 auto;
  width: 200px;
  height: 120px;
  margin-right: 20px;
  padding: 14px 15px;
}

.card--type--major {
  padding-top: 20px;
}

.card--white {
  background: #fff;
}

.card--clickable {
  cursor: pointer;
}

.card:last-child {
  margin-right: 0;
}

.card__heading {
  margin: 0 0 3px 0;
}

.card__header {
  margin-bottom: 15px;
}

.card__radio-group {
  margin-bottom: 25px;
}

.card__status-message {
  margin: 0;

  color: #858585;
  font-size: 12px;
}

.card__range-container {
  position: relative;

  height: 336px;
  margin-bottom: 25px;
}

.card__icon {
  position: absolute;
  top: 15px;
}

